Corrected margin error on suggestions list, on smaller screen sizes

--- a/css/movie-info-styles.css
+++ b/css/movie-info-styles.css
@@ -221,10 +221,6 @@ img {
         width: 80%;
     }
 
-    li {
-        margin: 0.7rem;
-    }
-
     .ratings-logos {
         min-width: 75px;
     }
